[project]
name = "etl_tutorial"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.12",
    "dagster-dbt>=0.28.11",
    "dagster-duckdb>=0.28.11",
    "dagster-evidence>=0.1.7",
    
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.3",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "etl_tutorial"
registry_modules = [
    "etl_tutorial.components.*",
]


